fix: stats always shown, music works on mobile, mute button moved to top-left

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
 .mute-toggle {
   position: fixed;
   top: 16px;
-  right: 16px;
+  left: 16px;
   z-index: 100;
   width: 42px;
   height: 42px;
